--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,7 @@
 {
-    "editor.inlayHints.enabled": "offUnlessPressed"
+    "editor.inlayHints.enabled": "offUnlessPressed",
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "guava-31.1-jre.jar"
+    ]
 }
